@@ -1,12 +1,15 @@
 package com.example.ShortenerProject.shortUrl;
 
-import com.example.ShortenerProject.user.User;
 import com.example.ShortenerProject.shortUrl.dto.ShortUrlCreateRequest;
+import com.example.ShortenerProject.shortUrl.dto.ShortUrlResponse;
+import com.example.ShortenerProject.user.User;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ShortUrlService {
@@ -18,14 +21,9 @@ public class ShortUrlService {
     }
 
     @Transactional
-    public String createShortUrl(ShortUrlCreateRequest request, User user) {
-
-        if (request.getShortUrl() == null || request.getShortUrl().isEmpty()) {
-            return "Short URL cannot be empty";
-        }
-
+    public ShortUrlResponse createShortUrl(ShortUrlCreateRequest request, User user) {
         if (shortUrlRepository.findByShortUrl(request.getShortUrl()).isPresent()) {
-            return "Short URL already exists";
+            throw new IllegalArgumentException("Short URL already exists.");
         }
 
         ShortUrl shortUrl = new ShortUrl();
@@ -33,41 +31,60 @@ public class ShortUrlService {
         shortUrl.setOriginUrl(request.getOriginUrl());
         shortUrl.setDateOfCreating(request.getDateOfCreating());
         shortUrl.setDateOfExpiring(request.getDateOfExpiring());
-        shortUrl.setCountOfTransition(0);
         shortUrl.setUser(user);
 
-        shortUrlRepository.save(shortUrl);
-        return "Short URL created successfully";
+        ShortUrl savedShortUrl = shortUrlRepository.save(shortUrl);
+        return mapToResponse(savedShortUrl);
     }
 
-    public List<ShortUrl> getAllShortUrlsByUser(User user) {
+    @Transactional(readOnly = true)
+    public List<ShortUrlResponse> findAllShortUrlsByUser(User user) {
         return shortUrlRepository.findAll().stream()
-                .filter(url -> url.getUser().getId() == user.getId())
-                .toList();
+                .filter(url -> Objects.equals(url.getUser().getId(), user.getId()))
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
-    public Optional<ShortUrl> findByIdAndUser(long id, User user) {
-        return shortUrlRepository.findAll().stream()
-                .filter(url -> url.getId() == id && url.getUser().getId() == user.getId())
-                .findFirst();
+    @Transactional(readOnly = true)
+    public Optional<ShortUrlResponse> findByIdAndUser(long id, User user) {
+        return shortUrlRepository.findById(id)
+                .filter(url -> Objects.equals(url.getUser().getId(), user.getId()))
+                .map(this::mapToResponse);
     }
 
     @Transactional
-    public void deleteShortUrl(long id, User user) {
-        shortUrlRepository.findAll().stream()
-                .filter(url -> url.getId() == id && url.getUser().getId() == user.getId())
-                .findFirst()
-                .ifPresent(shortUrlRepository::delete);
+    public void deleteShortUrl(ShortUrl shortUrl) {
+        shortUrlRepository.delete(shortUrl);
     }
 
-    public Optional<ShortUrl> findByShortUrl(String shortUrl) {
-        return shortUrlRepository.findAll().stream()
-                .filter(url -> url.getShortUrl().equals(shortUrl))
-                .findFirst();
+    @Transactional(readOnly = true)
+    public Optional<ShortUrlResponse> findByShortUrl(String shortUrl) {
+        return shortUrlRepository.findByShortUrl(shortUrl)
+                .map(this::mapToResponse);
     }
 
     @Transactional
-    public ShortUrl updateShortUrl(ShortUrl shortUrl) {
-        return shortUrlRepository.save(shortUrl);
+    public void updateShortUrl(ShortUrlCreateRequest request, long id, User user) {
+        ShortUrl shortUrl = shortUrlRepository.findById(id)
+                .filter(url -> Objects.equals(url.getUser().getId(), user.getId()))
+                .orElseThrow(() -> new IllegalArgumentException("Short URL does not exist."));
+
+        shortUrl.setShortUrl(request.getShortUrl());
+        shortUrl.setOriginUrl(request.getOriginUrl());
+        shortUrl.setDateOfCreating(request.getDateOfCreating());
+        shortUrl.setDateOfExpiring(request.getDateOfExpiring());
+
+        ShortUrl updatedShortUrl = shortUrlRepository.save(shortUrl);
+        mapToResponse(updatedShortUrl);
+    }
+
+    private ShortUrlResponse mapToResponse(ShortUrl shortUrl) {
+        ShortUrlResponse response = new ShortUrlResponse();
+        response.setShortUrl(shortUrl.getShortUrl());
+        response.setOriginUrl(shortUrl.getOriginUrl());
+        response.setDateOfCreating(shortUrl.getDateOfCreating());
+        response.setDateOfExpiring(shortUrl.getDateOfExpiring());
+        response.setUserName(shortUrl.getUser().getUsername());
+        return response;
     }
 }
